--- a/main/templates/main/blog-detail.html
+++ b/main/templates/main/blog-detail.html
@@ -55,6 +55,10 @@ Start Content
   </div>
 </section>
 
+<div class="text-center">
+  <img class="rounded" style="max-width: 50%;" src={{object.image.url}} alt="" srcset="">
+</div>
+
 <section>
   <div class="sectionSpaceSm">
     <div class="container">
