--- a/static/css/style.css
+++ b/static/css/style.css
@@ -316,11 +316,11 @@ a, .btn {
 .progress.progressStyle {
 	height: 8px;
 	padding: 1px;
-	background-color: var(--secondaryColor);
+	background-color: var(--lightBg);
 	border-radius: 3px;
 }
 .progressStyle .progress-bar {
-	background-color: #fff;
+	background-color:var(--secondaryColor);
 	border-radius: 3px;
 }
 .progressCol + .progressCol {
