--- a/main/templates/main/blog.html
+++ b/main/templates/main/blog.html
@@ -46,18 +46,36 @@ Start Content
 </section>
 
 <section>
-  <div class="lightBg">
+  <div class="">
     <div class="container">
       <div class="portfolioContentMain">
-        <div class="row g-3 g-md-4 g-lg-5 portfolioRow">
-          {% for obj in object_list %}
-          <div class="col-md-6 pColMain">
-            <div class="pCol">
-              <a href="{% url 'main:blog' slug=obj.slug %}" >
-              <img src="{{obj.image.url}}" alt="..." class="pImg">
-              </a>
+        <div class="row g-3 g-md-4 g-lg-6 portfolioRow">
+          {% for p in object_list %}
+          <div class="border" style="max-width: max-content;padding: 10px;">
+            <div class="row g-4 align-items-center">
+              <div class="col-md-auto">
+                <div class="portfolioImgCol">
+                  <a href="{% url 'main:blog' slug=p.slug %}"><img src="{{p.image.url}}" alt="..."></a>
+                </div>
+              </div>
+              <div class="col-md">
+                <div class="portfolioContentCol">
+                  <h4 class="lgTitle" style="font-size: x-large;"><a href="{% url 'main:blog' slug=p.slug %}">{{p.name}}</a></h4>
+                  <ul class="portfolioOption">
+                    <li><span class="dateLbl smTitle" style="font-size: 15px;">{{ p.created_date|date:'d-b-Y' }}</span></li>
+                  </ul>
+                  <p>{{p.description}}</p>
+                </div>
+              </div>
+              <div class="col">
+                <h4 class="title">Tags</h4>
+                {% for tag in p.tags.all %}
+                  <button type="button" class="btn btn-outline-secondary" style="font-size: small; padding: 7px; margin-bottom: 3px;">{{tag}}</button>  
+                {% endfor %}      
+              </div>
             </div>
           </div>
+          
           {% endfor %}
 
         </div>
