--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -42,7 +42,7 @@ Start Content
         </div>
         <div class="col-md">
           <div class="bannerContent">
-            <h1 class="xlTitle pb-3">Hi, I’m {{me.first_name|title}}</h1>
+            <h1 class="xlTitle pb-3">Hi, I’m {{me.first_name}}</h1>
             <p>{{me.userprofile.bio}}</p>
             <div class="bannerBtnCol">
               <div class="row">
@@ -61,23 +61,33 @@ Start Content
   </div>
 </section>
 
+
+<!-- Skills section -->
 <section>
   <div class="sectionSpace pt-0">
     <div class="container">
       <div class="row">
-        <div class="col-md-auto">
-          <div class="keySkillCol">
-            <h4 class="smTitle pb-3">Key Skills</h4>
-            {% for sk in me.userprofile.skills.all %}
-            {% if sk.is_key_skill %}
-            <div class="keySkillCard">
-              <div class="ksIconCol">
-                <img src="{{sk.image.url}}" alt="...">
+        <div class="col-md">
+          <div class="progressCol">
+            <h4 class="smTitle pb-3">Frameworks</h4>
+            <div class="progressCard">
+              {% for sk in me.userprofile.skills.all %}
+              <span class="progressLbl">{{sk.name}}</span>
+              <div class="row g-2 align-items-center">
+                <div class="col">
+                  <div class="progress progressStyle">
+                    <div class="progress-bar" role="progressbar" style="width: {{sk.score}}%" aria-valuenow="{{sk.score}}" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                </div>
+                <div class="col-auto">
+                  <span class="pLbl">{{sk.score}}%</span>
+                </div>
               </div>
-              <span class="ksText">{{sk.name}}</span>
+              <!-- {% if not sk.is_key_skill %} -->
+              <!-- {% endif %} -->
+              {% endfor %}
+              
             </div>
-            {% endif %}
-            {% endfor %}
           </div>
         </div>
         <div class="col-md">
@@ -85,21 +95,19 @@ Start Content
           <div class="progressCol">
             <div class="progressCard">
               {% for sk in me.userprofile.skills.all %}
-              {% if not sk.is_key_skill %}
-              <div class="progressCol">
-                <span class="progressLbl">{{sk.name}}</span>
-                <div class="row g-2 align-items-center">
-                  <div class="col">
-                    <div class="progress progressStyle">
-                      <div class="progress-bar" role="progressbar" style="width: {{sk.score}}%" aria-valuenow="{{sk.score}}" aria-valuemin="0" aria-valuemax="100"></div>
-                    </div>
-                  </div>
-                  <div class="col-auto">
-                    <span class="pLbl">{{sk.score}}%</span>
+              <span class="progressLbl">{{sk.name}}</span>
+              <div class="row g-2 align-items-center">
+                <div class="col">
+                  <div class="progress progressStyle">
+                    <div class="progress-bar" role="progressbar" style="width: {{sk.score}}%" aria-valuenow="{{sk.score}}" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                 </div>
+                <div class="col-auto">
+                  <span class="pLbl">{{sk.score}}%</span>
+                </div>
               </div>
-              {% endif %}
+              <!-- {% if not sk.is_key_skill %} -->
+              <!-- {% endif %} -->
               {% endfor %}
               
             </div>
