--- a/main/templates/main/portfolio.html
+++ b/main/templates/main/portfolio.html
@@ -47,16 +47,17 @@ Start Content
 
 <section>
   <div class="lightBg">
-    <div class="container">
+    <div class="container" >
       <div class="portfolioContentMain">
         <div class="row g-3 g-md-4 g-lg-5 portfolioRow">
           {% for obj in object_list %}
-          <div class="col-md-6 pColMain">
+          <div class="col-md-6 pColMain"  style="border: 5px;">
             <div class="pCol">
               <a href="{% url 'main:portfolio' slug=obj.slug %}" >
               <img src="{{obj.image.url}}" alt="..." class="pImg">
+              <h4>Title</h4>
               </a>
-            </div>
+            </div>            
           </div>
           {% endfor %}
           
